# demo-python-config-validation

./: README.md  pyproject.toml
config_validation/: io.py  validators.py
configs/: config.toml  config.yaml
